# docs/swagger.json
@@ -120,6 +120,36 @@
                 }
             }
         },
+        "/user/deleteFriend": {
+            "delete": {
+                "tags": [
+                    "好友"
+                ],
+                "summary": "删除好友",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "用户id",
+                        "name": "FromId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "目标id",
+                        "name": "TargetId",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "Object"
+                        }
+                    }
+                }
+            }
+        },
         "/user/getFriendList": {
             "get": {
                 "tags": [
