# router/app.go
@@ -29,6 +29,7 @@ func Router() *gin.Engine {
 	r.POST("/user/pushFriendRequest", service.PushFriendRequest)
 	r.PUT("/user/dealWithFriendRequest", service.DealWithFriendRequest)
 	r.GET("/user/getRequestWithOption", service.GetRequestWithOption)
+	r.DELETE("/user/deleteFriend", service.DeleteFriend)
 	gin.SetMode(gin.DebugMode)
 	return r
 }
